# valk

./: .gitignore  README.md
PCB/Enkooder/EnkooderL/: EnkooderL-cache.lib  EnkooderL-rescue.lib  EnkooderL.kicad_pcb  EnkooderL.kicad_prl  EnkooderL.kicad_pro  EnkooderL.kicad_sch
PCB/Enkooder/EnkooderR/: Enkooder.step  EnkooderR-cache.lib  EnkooderR.kicad_pcb  EnkooderR.kicad_prl  EnkooderR.kicad_pro  EnkooderR.kicad_sch
PCB/Enkooder/Libraries/: Hall_sensors.lib
PCB/Kontroller/: Kontroller-rescue.lib  Kontroller.kicad_pcb  Kontroller.kicad_prl  Kontroller.kicad_pro  Kontroller.kicad_sch  Kontroller.kicad_sch-bak  Power.kicad_sch  fp-info-cache  motor_driver.kicad_sch  motor_driver.kicad_sch-bak  peripherals.kicad_sch  sym-lib-table
PCB/Kontroller ESP/: Kontroller ESP.kicad_pcb  Kontroller ESP.kicad_prl  Kontroller ESP.kicad_pro  Kontroller ESP.kicad_sch  Kontroller ESP.step  fp-info-cache
PCB/Kontroller ESP/kontroller-gerbers/: Kontroller ESP-B_Cu.gbl  Kontroller ESP-B_Mask.gbs  Kontroller ESP-B_Paste.gbp  Kontroller ESP-B_Silkscreen.gbo  Kontroller ESP-Edge_Cuts.gm1  Kontroller ESP-F_Cu.gtl  Kontroller ESP-F_Mask.gts  Kontroller ESP-F_Paste.gtp  Kontroller ESP-F_Silkscreen.gto  Kontroller ESP-In1_Cu.g2  Kontroller ESP-In2_Cu.g3  Kontroller ESP-NPTH-drl_map.gbr  Kontroller ESP-NPTH.drl  Kontroller ESP-PTH-drl_map.gbr  (+1 more)
PCB/Sensor/: Sensor.kicad_pcb  Sensor.kicad_prl  Sensor.kicad_pro  Sensor.kicad_sch  Sensor.net  Sensor.step  fp-info-cache  fp-lib-table
Software/valk/: CMakeLists.txt  Makefile  sdkconfig.old
Software/valk/components/VL53L0X/: CMakeLists.txt
(+84 files in other folders)
